Model training - added

--- a/text_summarizer.ipynb
+++ b/text_summarizer.ipynb
@@ -2,7 +2,10 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "# Import dependencies"
    ]
@@ -29,12 +32,16 @@
     "import tensorflow as tf\n",
     "import data_utils\n",
     "from sklearn.cross_validation import train_test_split\n",
-    "import numpy as np "
+    "import numpy as np\n",
+    "import time"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "# Read a dataset"
    ]
@@ -54,7 +61,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "# Inspect data"
    ]
@@ -94,7 +104,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "# Data preprocessing"
    ]
@@ -115,7 +128,7 @@
     "word2idx['<go>'] =  vocab_size - 1\n",
     "idx2word[vocab_size - 1] = '<go>'\n",
     "\n",
-    "# padding data\n",
+    "# data padding\n",
     "def padding(x, y):\n",
     "    \n",
     "    labels = []\n",
@@ -130,7 +143,7 @@
     "            inputs.append((part, i)) \n",
     "    return inputs, labels\n",
     "\n",
-    "# spliting data\n",
+    "# data spliting\n",
     "X_train, X_test, Y_train, Y_test = train_test_split(X, Y, test_size = 0.1)\n",
     "\n",
     "del X\n",
@@ -141,7 +154,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "# Bulding a model"
    ]
@@ -159,7 +175,7 @@
     "input_seq_len = 100\n",
     "output_seq_len = 10\n",
     "\n",
-    "# placeholders for a sequences\n",
+    "# placeholders for sequences\n",
     "encoder_inputs = []\n",
     "for _ in range(input_seq_len):\n",
     "    encoder_inputs.append(tf.placeholder(tf.int32, shape = [None], name = 'encoder{}'.format(_)))\n",
@@ -180,7 +196,7 @@
     "model = tf.nn.seq2seq.embedding_attention_seq2seq(\n",
     "                                                encoder_inputs, \n",
     "                                                decoder_inputs, \n",
-    "                                                tf.nn.rnn_cell.BasicLSTMCell(512),\n",
+    "                                                tf.nn.rnn_cell.BasicLSTMCell(output_dim),\n",
     "                                                num_encoder_symbols = vocab_size,\n",
     "                                                num_decoder_symbols = vocab_size,\n",
     "                                                embedding_size = 100,\n",
@@ -191,7 +207,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "# Definition of loss function"
    ]
@@ -213,13 +232,16 @@
     "                biases=b,\n",
     "                labels=tf.reshape(labels, [-1, 1]),\n",
     "                inputs=logits,\n",
-    "                num_sampled=512,\n",
+    "                num_sampled=128,\n",
     "                num_classes=vocab_size)\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "# Some helper functions"
    ]
@@ -248,7 +270,7 @@
     "            \n",
     "    return feed\n",
     "\n",
-    "# predicting headline for article\n",
+    "# predicting a headline for article\n",
     "def predict(sess, feed_dict):\n",
     "    \n",
     "    outputs, states = sess.run(model, feed_dict = feed_dict)\n",
@@ -274,7 +296,7 @@
     "        \n",
     "    return words\n",
     "\n",
-    "# decoding label\n",
+    "# decoding a label\n",
     "def decode_label(label):\n",
     "    \n",
     "    words = []\n",
@@ -291,9 +313,12 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
-    "# Testing what model predicts before training"
+    "# Training the model"
    ]
   },
   {
@@ -310,21 +335,52 @@
      "output_type": "stream",
      "text": [
       "Predicted headline:\n",
-      "Bill Bill Bill graft graft graft graft graft graft graft \n",
+      "personality. personality. primary primary primary primary primary primary primary primary \n",
       "\n",
       "Actual headline:\n",
-      "Bookies pay out on Spurs 'goal' <eos> <pad> <pad> <pad>\n"
+      "England stutter to Zimbabwe win <eos> <pad> <pad> <pad> <pad> \n",
+      "\n",
+      "---------TRAINING---------\n",
+      "\n",
+      "\n",
+      "step: 0, loss: 40.7962417603\n",
+      "step: 9, loss: 35.7465782166\n",
+      "Training time for 10 steps:40.6767930984s\n"
      ]
     }
    ],
    "source": [
+    "steps = 10\n",
+    "learning_rate = 1.0\n",
+    "batch_size = 200\n",
+    "\n",
+    "labels_tensors = []\n",
+    "for _ in range(output_seq_len):\n",
+    "    labels_tensors.append(tf.placeholder(tf.int32, shape = [None], name = 'labels{}'.format(_)))\n",
+    "    \n",
+    "logits_tensors = []\n",
+    "for _ in range(output_seq_len):\n",
+    "    logits_tensors.append(tf.placeholder(tf.float32, shape = [None, output_dim], name = 'logits{}'.format(_)))\n",
+    "    \n",
+    "# calculate a loss for a whole seq\n",
+    "def calculate_loss():\n",
+    "    loss = sampled_loss(labels_tensors[0], logits_tensors[0])\n",
+    "    \n",
+    "    for i in range(1, output_seq_len):\n",
+    "        loss += sampled_loss(labels_tensors[i], logits_tensors[i])\n",
+    "        \n",
+    "    return tf.reduce_mean(loss)\n",
+    "\n",
+    "loss = calculate_loss()\n",
+    "optimizer = tf.train.GradientDescentOptimizer(learning_rate).minimize(loss)\n",
+    "\n",
     "with tf.Session() as sess:\n",
     "    init = tf.global_variables_initializer()\n",
     "    sess.run(init)\n",
     "    \n",
-    "    feed_dict = feed_dict(X_train, Y_train)\n",
-    "    outputs, labels = predict(sess, feed_dict)\n",
-    "    # projecting only one output_seq not whole batch - because of memory!   \n",
+    "    feed = feed_dict(X_train, Y_train)\n",
+    "    outputs, labels = predict(sess, feed)\n",
+    "    # projecting only one output_seq not a whole batch - because of memory!   \n",
     "    output_seq = proj(sess, [outputs[i][199].reshape(1, output_dim) for i in range(output_seq_len)])\n",
     "    \n",
     "    # decoding predicted headline     \n",
@@ -340,7 +396,35 @@
     "    print 'Actual headline:'\n",
     "    for word in words:\n",
     "        print word,\n",
+    "    print '\\n\\n---------TRAINING---------\\n\\n'\n",
+    "    \n",
+    "    # training\n",
+    "    t = time.time()\n",
+    "    for step in range(steps):\n",
+    "        feed = feed_dict(X_train, Y_train)\n",
+    "        outputs, labels = predict(sess, feed)\n",
+    "        labels.append(np.full(shape = [batch_size], fill_value = word2idx['<pad>']))\n",
+    "        \n",
+    "        feed = {}\n",
+    "        for i in range(output_seq_len):\n",
+    "            feed[labels_tensors[i].name] = labels[i]\n",
+    "            feed[logits_tensors[i].name] = outputs[i]\n",
+    "            \n",
+    "        sess.run(optimizer, feed_dict = feed)\n",
+    "        \n",
+    "        if step % (steps-1) == 0 or step == 0:\n",
+    "            loss_value = sess.run(loss, feed_dict = feed)\n",
+    "            print 'step: {}, loss: {}'.format(step, loss_value)\n",
+    "            \n",
+    "    print 'Training time for {} steps:{}s'.format(steps, time.time() - t)\n",
     "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## I will train the model for more steps later and test it!!!"
    ]
   },
   {
