Data processing - changed

--- a/text_summarizer.ipynb
+++ b/text_summarizer.ipynb
@@ -56,7 +56,7 @@
    },
    "outputs": [],
    "source": [
-    "X, Y, word2idx, idx2word, vocab, _ = data_utils.read_data_set('data.pkl') "
+    "X, Y, word2idx, idx2word, vocab = data_utils.read_data_set('data.pkl') "
    ]
   },
   {
@@ -84,14 +84,14 @@
      "output_type": "stream",
      "text": [
       "First article headline - encoded:\n",
-      "[3402, 6428, 48, 209, 1862]\n",
+      "[2636, 5032, 44, 195, 1249]\n",
       "['ECB', 'defends', 'England', 'tour', 'schedule']\n",
       "\n",
       "First article text - encoded:\n",
-      "[24, 48, 6, 146, 458, 732, 20, 1174, 364, 651, 5, 2, 23926, 7, 2, 209, 3, 135, 1988, 17146, 7, 2, 6540, 9212, 29, 287, 275, 5, 1771, 12159, 2, 51, 7, 76, 66, 3, 66, 3401, 3402, 554, 7, 269, 8285, 386, 3270, 101, 70, 2307, 147, 23107, 45, 12, 832, 2, 39, 11647, 26, 2, 135, 632, 11219, 10907, 135, 248, 14, 98, 36, 5795, 9795, 2101, 26, 51, 1483, 3, 2, 169, 7, 22748, 135, 248, 5244, 291, 2149, 3, 287, 1872, 6, 22, 2381, 35, 2696, 13, 183, 43, 594, 6, 393, 5854, 70, 250, 3, 62, 397, 148, 292, 6, 309, 295, 1524, 210, 2, 807, 7, 2, 136, 2101, 3, 4368, 2, 5203, 18, 3157, 7207, 57, 7, 451, 1612, 70, 32, 473, 3, 22829, 4, 1145, 1081, 7, 269, 50, 2, 1642, 2239, 10622, 182, 31, 4760, 18, 5659, 5, 4, 80, 5923, 142, 5, 1509, 7, 45, 2, 269, 9, 4752, 123, 63, 86, 2328, 18, 2, 9711, 7, 174, 269, 16, 2, 3766, 6, 135, 1974, 2101, 5, 17217, 1954, 16332, 658, 7, 147, 209, 30, 3, 19, 9795, 71, 4, 74, 5986, 4821, 70, 4587, 5, 4, 508, 3, 4220, 4, 24403, 5, 2, 176, 7, 148, 292, 95, 295, 10334, 2759, 17888, 61, 6592, 2, 1862, 10, 15100, 26, 20831, 8, 2, 68, 6, 38, 2, 2088, 7, 35, 5659, 10, 23566, 2, 4072, 3499, 413, 2, 1977, 70, 14, 3, 823, 147, 1588, 1917, 631, 13, 2, 135, 632, 7929, 6, 320, 18, 44, 1642, 25, 2027, 33, 4, 6724, 4772, 3270, 332, 517, 48, 322, 678, 10686, 4891, 1819, 140, 76, 513, 66, 3, 66, 23, 22316, 6, 38, 3270, 6, 48, 110, 2687, 2934, 161, 222, 14, 931, 3, 331, 46, 779, 2055, 16, 2416, 2, 7250, 1253, 7, 2, 48, 148, 1739, 118, 2, 200, 77, 10, 107, 392, 5, 7126, 81, 2, 3987, 22215, 148, 292, 5, 76, 6, 4, 247, 437, 9, 4, 402, 7534, 1007, 107, 645, 81, 2141, 12, 82, 538, 2, 39, 247, 7, 67, 376, 1049, 125, 11, 209, 6, 8, 109, 95, 199, 437, 6, 17, 1188, 117, 754, 3571, 140, 4, 449, 7, 1274, 870, 527, 9, 74, 12363, 505, 5214, 140, 199, 148, 292, 13, 107, 198, 5, 12985, 1394, 2, 142, 5136, 4540, 32, 1455, 195, 8201, 24, 198, 154, 7727, 6, 1429, 21, 1007, 74, 316, 84, 3, 469, 475, 1958, 195, 63, 4, 657, 7, 294, 3, 88, 11, 13, 331, 288, 57, 1019, 255, 2, 209, 10, 8892, 195, 58, 57, 29, 76, 148, 1390, 2423, 419, 4, 664, 5, 1771, 1889, 21, 1007, 107, 1512, 3, 19, 272, 128, 81, 331, 5765, 330, 1072, 5, 9542]\n",
+      "[19, 44, 6, 117, 481, 702, 21, 1279, 403, 636, 5, 2, 14744, 7, 2, 195, 3, 145, 218, 13107, 7, 2, 5366, 8742, 30, 307, 264, 5, 1805, 1745, 2, 55, 7, 79, 66, 3, 66, 435, 2636, 589, 7, 230, 5344, 410, 2369, 23, 60, 2424, 160, 9939, 48, 14, 906, 2, 41, 7204, 27, 2, 145, 709, 702, 4049, 145, 218, 15, 111, 37, 5800, 9278, 1393, 27, 55, 894, 3, 2, 171, 7, 1308, 145, 218, 4883, 258, 2251, 3, 307, 1779, 6, 24, 2081, 36, 1988, 13, 161, 46, 584, 6, 420, 991, 60, 267, 3, 59, 413, 135, 242, 6, 308, 312, 791, 240, 2, 669, 7, 2, 136, 1393, 3, 4268, 2, 4320, 17, 3095, 5047, 58, 7, 476, 230, 60, 33, 513, 3, 12894, 4, 1297, 1204, 7, 230, 47, 2, 1520, 357, 6289, 137, 32, 4570, 17, 5403, 5, 4, 85, 5394, 131, 5, 1410, 7, 48, 2, 230, 10, 119, 61, 69, 89, 1771, 17, 2, 7472, 7, 176, 230, 18, 2, 544, 6, 145, 2086, 1393, 5, 1178, 2019, 13717, 732, 7, 160, 195, 31, 3, 20, 9278, 84, 4, 76, 4674, 1018, 60, 4063, 5, 4, 483, 3, 4275, 4, 15755, 5, 2, 200, 7, 135, 242, 102, 312, 791, 1321, 2369, 50, 5561, 2, 1249, 12, 342, 27, 2510, 8, 2, 57, 6, 23, 2, 1953, 7, 36, 5403, 12, 11231, 2, 3834, 2681, 422, 2, 106, 60, 15, 3, 767, 160, 1486, 54, 701, 13, 2, 145, 709, 639, 6, 332, 17, 45, 1520, 25, 2217, 34, 4, 5934, 527, 2369, 115, 612, 44, 354, 670, 7268, 4366, 1939, 148, 79, 435, 66, 3, 66, 26, 7910, 6, 23, 2369, 6, 44, 104, 2340, 2722, 182, 241, 15, 955, 3, 25, 38, 815, 1210, 18, 1695, 2, 6105, 1398, 7, 2, 44, 135, 167, 130, 2, 225, 72, 12, 122, 322, 5, 4899, 87, 2, 1249, 3876, 135, 242, 5, 79, 6, 4, 216, 335, 10, 4, 411, 1249, 1149, 122, 654, 87, 17, 14, 23, 198, 2, 41, 216, 7, 73, 275, 829, 125, 11, 195, 6, 8, 105, 102, 204, 335, 6, 9, 1334, 109, 593, 2120, 148, 4, 516, 7, 1315, 156, 377, 10, 76, 704, 598, 4819, 148, 204, 135, 242, 13, 122, 156, 5, 283, 818, 2, 131, 4615, 3534, 33, 88, 162, 1165, 19, 156, 152, 6141, 6, 1478, 22, 1149, 76, 346, 63, 3, 539, 548, 262, 162, 69, 4, 610, 7, 314, 3, 95, 11, 13, 25, 60, 58, 1103, 280, 2, 195, 12, 2515, 162, 56, 58, 30, 79, 135, 242, 765, 464, 4, 734, 5, 1805, 1745, 22, 1149, 122, 1481, 3, 20, 271, 121, 87, 25, 2350, 310, 720, 5, 737]\n",
       "\n",
       "Most freq. words:\n",
-      "['the', 'to', 'a', 'in', 'and', 'of', 'for', 'is', 'was', 'on', 'he', 'with', 'have', 'his', 'at', 'I', 'that', 'be', 'has', 'but', 'will', 'as', 'The', 'it', 'from', 'not', 'by', 'after', 'had', 'we', 'are', 'been', 'who', 'their', 'an', '-', 'said', 'first', 'they', '\"I', 'out', 'against', 'this', 'when', 'But', 'would', 'England', 'were', 'over', 'last']\n"
+      "['the', 'to', 'a', 'in', 'and', 'of', 'for', 'I', 'is', 'on', 'was', 'with', 'he', 'have', 'his', 'that', 'at', 'The', 'be', 'has', 'but', 'said', 'will', 'it', 'as', 'from', 'not', 'by', 'after', 'had', 'we', 'are', 'been', 'who', 'their', 'an', 'But', 'out', '-', 'first', 'they', 'game', 'England', 'this', 'against', 'over', 'when', 'would', 'He', 'win']\n"
      ]
     }
    ],
@@ -335,17 +335,17 @@
      "output_type": "stream",
      "text": [
       "Predicted headline:\n",
-      "personality. personality. primary primary primary primary primary primary primary primary \n",
+      "addressed showdown showdown showdown showdown showdown inform inform inform inform \n",
       "\n",
       "Actual headline:\n",
-      "England stutter to Zimbabwe win <eos> <pad> <pad> <pad> <pad> \n",
+      "Bellamy under new fire <eos> <pad> <pad> <pad> <pad> <pad> \n",
       "\n",
       "---------TRAINING---------\n",
       "\n",
       "\n",
-      "step: 0, loss: 40.7962417603\n",
-      "step: 9, loss: 35.7465782166\n",
-      "Training time for 10 steps:40.6767930984s\n"
+      "step: 0, loss: 42.4887809753\n",
+      "step: 9, loss: 33.2317581177\n",
+      "Training time for 10 steps:41.0931520462s\n"
      ]
     }
    ],
@@ -422,7 +422,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## I will train the model for more steps later and test it!!!"
    ]
@@ -431,7 +434,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": []
