--- a/text_summarizer.ipynb
+++ b/text_summarizer.ipynb
@@ -18,20 +18,11 @@
     "deletable": true,
     "editable": true
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/nemanja/.local/lib/python2.7/site-packages/sklearn/cross_validation.py:44: DeprecationWarning: This module was deprecated in version 0.18 in favor of the model_selection module into which all the refactored classes and functions are moved. Also note that the interface of the new CV iterators are different from that of this module. This module will be removed in 0.20.\n",
-      "  \"This module will be removed in 0.20.\", DeprecationWarning)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import tensorflow as tf\n",
     "import data_utils\n",
-    "from sklearn.cross_validation import train_test_split\n",
+    "from sklearn.model_selection import train_test_split\n",
     "import numpy as np\n",
     "import time"
    ]
@@ -137,8 +128,8 @@
     "    \n",
     "    inputs = []\n",
     "    for i in range(len(x)):\n",
-    "        for j in range(len(x[i]) % 2 + 1):\n",
-    "            part = x[i][j*100:(j+1)*100]\n",
+    "        for j in range(0, len(x[i]) - 50, 50):\n",
+    "            part = x[i][j:j+100]\n",
     "            part = (100 - len(part)) * [word2idx['<pad>']] + part\n",
     "            inputs.append((part, i)) \n",
     "    return inputs, labels\n",
@@ -193,7 +184,7 @@
     "b = tf.get_variable(\"proj_b\", [vocab_size], dtype=tf.float32)\n",
     "output_projection = (w, b)\n",
     "\n",
-    "model = tf.nn.seq2seq.embedding_attention_seq2seq(\n",
+    "outputs, states = tf.nn.seq2seq.embedding_attention_seq2seq(\n",
     "                                                encoder_inputs, \n",
     "                                                decoder_inputs, \n",
     "                                                tf.nn.rnn_cell.BasicLSTMCell(output_dim),\n",
@@ -232,8 +223,8 @@
     "                biases=b,\n",
     "                labels=tf.reshape(labels, [-1, 1]),\n",
     "                inputs=logits,\n",
-    "                num_sampled=128,\n",
-    "                num_classes=vocab_size)\n"
+    "                num_sampled=256,\n",
+    "                num_classes=vocab_size)"
    ]
   },
   {
@@ -257,7 +248,7 @@
    "outputs": [],
    "source": [
     "# helper function for feeding data into placeholders\n",
-    "def feed_dict(x, y, batch_size = 200):\n",
+    "def feed_dict(x, y, batch_size = 64):\n",
     "    \n",
     "    idxes = np.random.choice([i for i in range(len(x))], size = batch_size)\n",
     "    \n",
@@ -269,22 +260,8 @@
     "            feed[decoder_inputs[i].name] = np.array([y[x[j][1]][i] for j in idxes])\n",
     "            \n",
     "    return feed\n",
-    "\n",
-    "# predicting a headline for article\n",
-    "def predict(sess, feed_dict):\n",
     "    \n",
-    "    outputs, states = sess.run(model, feed_dict = feed_dict)\n",
-    "    labels = sess.run(targets, feed_dict = feed_dict)\n",
-    "    \n",
-    "    return outputs, labels\n",
-    "\n",
-    "# output projection\n",
-    "def proj(sess, output_seq):\n",
-    "    \n",
-    "    output_proj_ops = [tf.matmul(output_seq[i], output_projection[0]) + output_projection[1] for i in range(output_seq_len)]\n",
-    "    return np.array(sess.run(output_proj_ops))\n",
-    "    \n",
-    "# decoding predicted headline\n",
+    "# decoding output seq - headline\n",
     "def decode_output_seq(output_seq):\n",
     "    \n",
     "    words = []\n",
@@ -296,7 +273,7 @@
     "        \n",
     "    return words\n",
     "\n",
-    "# decoding a label\n",
+    "# decoding label\n",
     "def decode_label(label):\n",
     "    \n",
     "    words = []\n",
@@ -318,7 +295,7 @@
     "editable": true
    },
    "source": [
-    "# Training the model"
+    "# Definitions of params and ops"
    ]
   },
   {
@@ -329,69 +306,115 @@
     "deletable": true,
     "editable": true
    },
+   "outputs": [],
+   "source": [
+    "# parameters\n",
+    "steps = 10\n",
+    "learning_rate = 0.5\n",
+    "batch_size = 64\n",
+    "\n",
+    "# adding one more target\n",
+    "targets.append(np.full(shape = [batch_size], fill_value = word2idx['<pad>']))\n",
+    "# placeholders for output_seq\n",
+    "logits = [tf.placeholder(tf.float32, shape = [None, output_dim], name = 'logits{}'.format(i)) for i in range(output_seq_len)]\n",
+    "\n",
+    "# ops for projecting outputs\n",
+    "outputs_proj = [tf.matmul(logits[i], output_projection[0]) + output_projection[1] for i in range(output_seq_len)]\n",
+    "\n",
+    "# calculate the loss for a whole seq\n",
+    "def calculate_loss():\n",
+    "    loss = sampled_loss(targets[0], logits[0])\n",
+    "    \n",
+    "    for i in range(1, output_seq_len):\n",
+    "        loss += sampled_loss(targets[i], logits[i])\n",
+    "        \n",
+    "    return tf.reduce_mean(loss)\n",
+    "\n",
+    "# loss and optimizer ops\n",
+    "loss = calculate_loss()\n",
+    "optimizer = tf.train.GradientDescentOptimizer(learning_rate).minimize(loss)\n",
+    "\n",
+    "# initialization op\n",
+    "init = tf.global_variables_initializer()\n",
+    "\n",
+    "# generating headlines for a batch of articles\n",
+    "def forward_step(sess, feed):\n",
+    "    get_logits(sess, feed)\n",
+    "    output_sequences = sess.run(outputs_proj, feed_dict = feed)\n",
+    "    return output_sequences\n",
+    "\n",
+    "# training step\n",
+    "def backward_step(sess, feed):\n",
+    "    get_logits(sess, feed)\n",
+    "    sess.run(optimizer, feed_dict = feed)\n",
+    "    \n",
+    "def get_logits(sess, feed):\n",
+    "    output_sequences = sess.run(outputs, feed_dict = feed)\n",
+    "        \n",
+    "    for i in range(output_seq_len):\n",
+    "        feed[logits[i].name] = output_sequences[i]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
+   "source": [
+    "# Training the model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "---THIS IS WHAT MODEL GENERATES BEFORE TRAINING---\n",
+      "\n",
       "Predicted headline:\n",
-      "addressed showdown showdown showdown showdown showdown inform inform inform inform \n",
+      "continuity continuity continuity continuity continuity continuity continuity Bovina Bovina Bovina \n",
       "\n",
       "Actual headline:\n",
-      "Bellamy under new fire <eos> <pad> <pad> <pad> <pad> <pad> \n",
+      "Trial date is set for Balco case <eos> <pad> <pad> \n",
       "\n",
       "---------TRAINING---------\n",
       "\n",
       "\n",
-      "step: 0, loss: 42.4887809753\n",
-      "step: 9, loss: 33.2317581177\n",
-      "Training time for 10 steps:41.0931520462s\n"
+      "step: 0, loss: 55.201877594\n",
+      "step: 9, loss: 38.7748413086\n",
+      "Training time for 10 steps:15.2158019543s\n"
      ]
     }
    ],
    "source": [
-    "steps = 10\n",
-    "learning_rate = 1.0\n",
-    "batch_size = 200\n",
-    "\n",
-    "labels_tensors = []\n",
-    "for _ in range(output_seq_len):\n",
-    "    labels_tensors.append(tf.placeholder(tf.int32, shape = [None], name = 'labels{}'.format(_)))\n",
-    "    \n",
-    "logits_tensors = []\n",
-    "for _ in range(output_seq_len):\n",
-    "    logits_tensors.append(tf.placeholder(tf.float32, shape = [None, output_dim], name = 'logits{}'.format(_)))\n",
-    "    \n",
-    "# calculate a loss for a whole seq\n",
-    "def calculate_loss():\n",
-    "    loss = sampled_loss(labels_tensors[0], logits_tensors[0])\n",
-    "    \n",
-    "    for i in range(1, output_seq_len):\n",
-    "        loss += sampled_loss(labels_tensors[i], logits_tensors[i])\n",
-    "        \n",
-    "    return tf.reduce_mean(loss)\n",
-    "\n",
-    "loss = calculate_loss()\n",
-    "optimizer = tf.train.GradientDescentOptimizer(learning_rate).minimize(loss)\n",
-    "\n",
     "with tf.Session() as sess:\n",
-    "    init = tf.global_variables_initializer()\n",
+    "    \n",
     "    sess.run(init)\n",
     "    \n",
-    "    feed = feed_dict(X_train, Y_train)\n",
-    "    outputs, labels = predict(sess, feed)\n",
-    "    # projecting only one output_seq not a whole batch - because of memory!   \n",
-    "    output_seq = proj(sess, [outputs[i][199].reshape(1, output_dim) for i in range(output_seq_len)])\n",
+    "    print '---THIS IS WHAT MODEL GENERATES BEFORE TRAINING---\\n'\n",
+    "    feed = feed_dict(X_train, Y_train, 1)\n",
+    "    output_sequences = forward_step(sess, feed)\n",
     "    \n",
-    "    # decoding predicted headline     \n",
-    "    output_seq = np.reshape(output_seq, [output_seq_len, vocab_size])\n",
+    "    # decoding generated headline     \n",
+    "    output_seq = np.reshape(output_sequences, [output_seq_len, vocab_size])\n",
     "    words = decode_output_seq(output_seq)\n",
     "    print 'Predicted headline:'\n",
     "    for word in words:\n",
     "        print word,\n",
     "    print '\\n'\n",
-    "    # decoding corresponding label     \n",
-    "    label = [labels[i][199] for i in range(output_seq_len-1)] + [word2idx['<pad>']]\n",
+    "    \n",
+    "    # decoding corresponding label\n",
+    "    labels = sess.run(targets[:-1], feed_dict = feed)\n",
+    "    label = [labels[i][0] for i in range(output_seq_len-1)] + [word2idx['<pad>']]\n",
     "    words = decode_label(label)\n",
     "    print 'Actual headline:'\n",
     "    for word in words:\n",
@@ -402,15 +425,8 @@
     "    t = time.time()\n",
     "    for step in range(steps):\n",
     "        feed = feed_dict(X_train, Y_train)\n",
-    "        outputs, labels = predict(sess, feed)\n",
-    "        labels.append(np.full(shape = [batch_size], fill_value = word2idx['<pad>']))\n",
-    "        \n",
-    "        feed = {}\n",
-    "        for i in range(output_seq_len):\n",
-    "            feed[labels_tensors[i].name] = labels[i]\n",
-    "            feed[logits_tensors[i].name] = outputs[i]\n",
     "            \n",
-    "        sess.run(optimizer, feed_dict = feed)\n",
+    "        backward_step(sess, feed)\n",
     "        \n",
     "        if step % (steps-1) == 0 or step == 0:\n",
     "            loss_value = sess.run(loss, feed_dict = feed)\n",
@@ -429,17 +445,6 @@
    "source": [
     "## I will train the model for more steps later and test it!!!"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
