Bug fixed - loss

--- a/text_summarizer.ipynb
+++ b/text_summarizer.ipynb
@@ -315,18 +315,16 @@
     "\n",
     "# adding one more target\n",
     "targets.append(np.full(shape = [batch_size], fill_value = word2idx['<pad>']))\n",
-    "# placeholders for output_seq\n",
-    "logits = [tf.placeholder(tf.float32, shape = [None, output_dim], name = 'logits{}'.format(i)) for i in range(output_seq_len)]\n",
     "\n",
     "# ops for projecting outputs\n",
-    "outputs_proj = [tf.matmul(logits[i], output_projection[0]) + output_projection[1] for i in range(output_seq_len)]\n",
+    "outputs_proj = [tf.matmul(outputs[i], output_projection[0]) + output_projection[1] for i in range(output_seq_len)]\n",
     "\n",
     "# calculate the loss for a whole seq\n",
     "def calculate_loss():\n",
-    "    loss = sampled_loss(targets[0], logits[0])\n",
+    "    loss = sampled_loss(targets[0], outputs[0])\n",
     "    \n",
     "    for i in range(1, output_seq_len):\n",
-    "        loss += sampled_loss(targets[i], logits[i])\n",
+    "        loss += sampled_loss(targets[i], outputs[i])\n",
     "        \n",
     "    return tf.reduce_mean(loss)\n",
     "\n",
@@ -339,20 +337,12 @@
     "\n",
     "# generating headlines for a batch of articles\n",
     "def forward_step(sess, feed):\n",
-    "    get_logits(sess, feed)\n",
     "    output_sequences = sess.run(outputs_proj, feed_dict = feed)\n",
     "    return output_sequences\n",
     "\n",
     "# training step\n",
     "def backward_step(sess, feed):\n",
-    "    get_logits(sess, feed)\n",
-    "    sess.run(optimizer, feed_dict = feed)\n",
-    "    \n",
-    "def get_logits(sess, feed):\n",
-    "    output_sequences = sess.run(outputs, feed_dict = feed)\n",
-    "        \n",
-    "    for i in range(output_seq_len):\n",
-    "        feed[logits[i].name] = output_sequences[i]"
+    "    sess.run(optimizer, feed_dict = feed)"
    ]
   },
   {
